# SunPower_Solar

./: .gitignore  Cargo.toml  README.md  config.yml  config_template.yml  log_config.yml  main.rs
Grafana/Grafana_Dashboard_JSONs/: Individual_Panel_Power.json  Individual_Panel_Power_v0.0.1.json  Individual_Panel_Power_v0.0.2.json  Individual_Panel_Power_v0.0.3.json  Individual_Panels.json  Solar Overview.json  Solar Overview_v0.0.1.json
Grafana/Grafana_Queries/: CurDayWeather.sql  Current_Power.sql  Daily Energy.sql  Inverter_recent_ave_as_cols.sql  MTD Energy.sql  Today Energy v0.0.2.sql  Today Energy.sql  WTD Energy.sql  YTD Energy.sql
Grafana/Icons/Solar_Icons/: README.md
Grafana/Icons/WeatherIcons/: README.md
Grafana/Icons/WeatherIcons/Icons/MoonPhases/: moon_phase.csv
Grafana/Images/: vecteezy_electrical-cabinet-cartoon-free-space-for-text-wallpaper_.xcf  vk3g_8fyd_230125.xcf
src/: Parameters.txt  main.rs  units_table.txt
