[package]
name = "pvs6_to_mysql"
version = "0.2.2"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.11.1"
once_cell = "1.21.1"
mysql = { version = "26.0", features = ["chrono", "frunk", "derive"] }
myloginrs = "0.1"
chrono = "0.4"
log4rs = "1.3"
log = "0.4"
frunk = "0.4"
